# ComfyUI-ResolutionPresets

./: nodes.py  presets.py  pyproject.toml  update_plugin.py  utils.py
web/: resolution_presets.js
