[project]
name = "ComfyUI_ResolutionPresets"
version = "1.0.0"
description = "专业的ComfyUI分辨率预设与工具插件"
authors = [{ name = "fan200617120-ui" }]
license = { file = "MIT License.txt" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "torch>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-ResolutionPresets"
Repository = "https://github.com/yourusername/ComfyUI-ResolutionPresets"
Issues = "https://github.com/yourusername/ComfyUI-ResolutionPresets/issues"

[tool.setuptools]
packages = ["resolution_presets"]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
